# docs/swagger/gonuxt.swagger.json
@@ -16,6 +16,64 @@
     "application/json"
   ],
   "paths": {
+    "/auth/google": {
+      "get": {
+        "operationId": "GoNuxt_GoogleLogin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGoogleLoginResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "GoNuxt"
+        ]
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "operationId": "GoNuxt_GoogleCallback",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGoogleCallbackResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "code",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "state",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "GoNuxt"
+        ]
+      }
+    },
     "/v1/create_user": {
       "post": {
         "operationId": "GoNuxt_CreateUser",
@@ -161,7 +219,7 @@
     "pbCreateUserRequest": {
       "type": "object",
       "properties": {
-        "username": {
+        "email": {
           "type": "string"
         },
         "password": {
@@ -177,10 +235,26 @@
         }
       }
     },
+    "pbGoogleCallbackResponse": {
+      "type": "object",
+      "properties": {
+        "jwt_token": {
+          "type": "string"
+        }
+      }
+    },
+    "pbGoogleLoginResponse": {
+      "type": "object",
+      "properties": {
+        "redirect_url": {
+          "type": "string"
+        }
+      }
+    },
     "pbLoginUserRequest": {
       "type": "object",
       "properties": {
-        "username": {
+        "email": {
           "type": "string"
         },
         "password": {
@@ -222,12 +296,33 @@
         "access_token_expires_at": {
           "type": "string",
           "format": "date-time"
+        },
+        "user": {
+          "$ref": "#/definitions/pbUser"
+        },
+        "session": {
+          "$ref": "#/definitions/pbSession"
+        }
+      }
+    },
+    "pbSession": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "expires_at": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
     "pbUpdateUserRequest": {
       "type": "object",
       "properties": {
+        "id": {
+          "type": "string"
+        },
         "username": {
           "type": "string"
         },
@@ -237,6 +332,9 @@
         "balance": {
           "type": "integer",
           "format": "int32"
+        },
+        "role": {
+          "type": "string"
         }
       }
     },
@@ -252,6 +350,9 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "string"
+        },
+        "email": {
           "type": "string"
         },
         "username": {
